Finish part 3 of cs24hw1

--- a/hws/cs24hw1/proc/Makefile.branch
+++ b/hws/cs24hw1/proc/Makefile.branch
@@ -1,6 +1,6 @@
 SOURCES=bus.c branching_program_counter.c instruction_store.c \
 	branching_decode.c register_file.c alu.c branching_control.c \
-	branch_unit.c branching_processor.c 
+	branch_unit.c branching_processor.c
 
 OBJECTS=$(SOURCES:.c=.o)
 EXE=branching_run
@@ -23,12 +23,18 @@ branching_processor.o:	branching_processor.c alu.h register_file.h branching_dec
 
 branching_run:	bus.o branching_program_counter.o instruction_store.o \
 	  branching_decode.o register_file.o branch_unit.o \
-	  alu.o branching_control.o branching_processor.o run.o 
+	  alu.o branching_control.o branching_processor.o run.o
 	gcc -o branching_run bus.o branching_program_counter.o instruction_store.o \
 	  branching_decode.o branch_unit.o register_file.o alu.o \
 	  branching_control.o branching_processor.o run.o
 
 testalu: alu.o bus.o testalu.o
+
+convert: convert.o
+	gcc -o convert convert.o
+
+convert.o: convert.c
+	gcc -c convert.c
 
 .PHONY = clean all
 
