--- a/hws/cs24hw2/Makefile
+++ b/hws/cs24hw2/Makefile
@@ -1,8 +1,8 @@
-all: factmain 
+all: factmain gcdmain
 
-# perhaps use this as you develop further parts 
+# perhaps use this as you develop further parts
 # of the assignment
-#all: factmain gcdmain 
+#all: factmain gcdmain
 
 factmain.o:	fact.h factmain.c
 fact.o:	fact.s
