Complete part 1 of cs24hw4

--- a/hws/cs24hw4/classes/Makefile
+++ b/hws/cs24hw4/classes/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -g -O0
 
 
 shapeinfo : shapes.o shapeinfo.o
-	gcc $(LDFLAGS) -o $@ $^
+	gcc $(LDFLAGS) -lm -o $@ $^
 
 # dependencies on header files
 shapes.c : shapes.h
