Implement, for part d), the optimization where the linked-list of value structs is changed to an integer array

--- a/hws/cs24hw5/cpuinfo/Makefile
+++ b/hws/cs24hw5/cpuinfo/Makefile
@@ -1,6 +1,6 @@
 # MacOS X flags for building for 32-bit Pentium Pro
-ASFLAGS=-arch i686
-CFLAGS=-arch i686
+#ASFLAGS=-arch i686
+#CFLAGS=-arch i686
 
 OBJS=cpuid.o cpuid_ext.o cpuinfo.o
 
