Get rid of debug flag on Makefile

--- a/hws/cs24hw5/multimap/Makefile
+++ b/hws/cs24hw5/multimap/Makefile
@@ -1,5 +1,5 @@
 # For performance testing:
-CFLAGS = -Wall -DNDEBUG -O2 -g
+CFLAGS = -Wall -DNDEBUG -O2
 
 # For debugging:
 # CFLAGS = -Wall -g -O0 -DDEBUG_ZERO
